GitHubService - access modifier switched to private for internal methods